# Habit_tracker

./: .coverage  .dockerignore  .env_template  .flake8  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
config/: celery.py  settings.py  urls.py
habits/: models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
habits/tests/: test_habits_api.py  test_validators.py
nginx/: Dockerfile  nginx.conf
telegram_bot/: bot_handler.py  client.py  serializers.py  urls.py  views.py
telegram_bot/management/commands/: runbot.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_users_api.py
